--- a/content/Taphop.ipynb
+++ b/content/Taphop.ipynb
@@ -7,6 +7,27 @@
     "tags": []
    },
    "source": [
+    "Cách biểu diễn một tập hợp trong Python khá giống với cách biểu diễn một tập hợp trong toán học:\n",
+    "\n",
+    "| Tính năng                        | Biểu diễn trong Toán học thông thường                    | Biểu diễn trong Python       |\n",
+    "|----------------------------------|--------------------------------------------------------|------------------------------|\n",
+    "| Tập hợp rỗng                     | $\\emptyset$  hoặc $\\{\\}$                           | `set()`                      |\n",
+    "| Tạo tập hợp bằng cách liệt kê các phần tử                     | $\\{1, 2, 3\\}$                                    | `{1, 2, 3}`                  |\n",
+    "| Hợp                              | $(A \\cup B)$                                        | `A.union(B)` hoặc `A \\| B`    |\n",
+    "| Giao                             | $(A \\cap B)$                                        | `A.intersection(B)` hoặc `A & B` |\n",
+    "| Tập hợp con                      | $(A \\subseteq B)$                                   | `A.issubset(B)`              |\n",
+    "| Tập hợp cha                      | $(A \\supseteq B)$                                   | `A.issuperset(B)`            |\n",
+    "| Thành viên                       | $(x \\in A)$                                         | `x in A`                     |\n",
+    "| tạo tập hợp bằng cách chỉ ra tính cách đặc trưng của các phần tử                        | $\\{x \\mid x \\text{ thỏa mãn điều kiện nào đó}\\}$ | `{x for x in ... if dieukien(x)}`      |\n",
+    "\n",
+    "Dưới đây là một số bài tập giống như các bài tập trong sách giáo khoa, kèm với diễn đạt bằng python của các bài tập đó"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "269883f1",
+   "metadata": {},
+   "source": [
     "# Cho tập hợp M={\"bóng bàn\",\"bóng đá\", \"cầu lông\", \"bóng rổ\"}, hãy đọc tên các phần tử của tập hợp đó"
    ]
   },
@@ -59,16 +80,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n"
+      "2 có thuộc B:  True\n",
+      "4 có thuộc B:  False\n"
      ]
     }
    ],
    "source": [
+    "# Cho tập hợp B = {2, 3, 5, 7}\n",
     "B = {2, 3, 5, 7}\n",
     "\n",
-    "print (2 in B)\n",
-    "print (4 in B)"
+    "# 2 có thuộc B hay không\n",
+    "print (\"2 có thuộc B: \", 2 in B)\n",
+    "\n",
+    "# 4 có thuộc B hay không\n",
+    "print (\"4 có thuộc B: \", 4 in B)"
    ]
   },
   {
@@ -95,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "35b0c1ef-7f88-4ad7-bc8f-bda2e54f5ba3",
    "metadata": {
     "tags": []
@@ -105,18 +130,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n",
+      "\"a\" ∈ M: True\n",
+      "\"b\" ∈ M: False\n",
       "False\n",
       "True\n"
      ]
     }
    ],
    "source": [
+    "# Cho tập hợp M = {\"a\",\"e\", \"i\", \"o\", \"u\"}\n",
     "M = {\"a\",\"e\", \"i\", \"o\", \"u\"}\n",
-    "print (\"a\" in M)\n",
-    "print (\"b\" in M)\n",
+    "\n",
+    "# \"a\" ∈ M ?\n",
+    "print ('\"a\" ∈ M:', \"a\" in M)\n",
+    "\n",
+    "print ('\"b\" ∈ M:', \"b\" in M)\n",
+    "\n",
     "print (\"e\" not in M)\n",
+    "\n",
     "print (\"c\" not in M)"
    ]
   },
@@ -143,9 +174,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "True\n",
-      "False\n",
+      "Tháng 1 có 31 ngày\n",
+      "Tháng 2 có 28 ngày\n",
+      "Tháng 3 có 31 ngày\n",
+      "Tháng 4 có 30 ngày\n",
+      "Tháng 5 có 31 ngày\n",
+      "Tháng 6 có 30 ngày\n",
+      "Tháng 7 có 31 ngày\n",
+      "Tháng 8 có 31 ngày\n",
+      "Tháng 9 có 30 ngày\n",
+      "Tháng 10 có 31 ngày\n",
+      "Tháng 11 có 30 ngày\n",
+      "Tháng 12 có 31 ngày\n",
+      "Tháng Hai thuộc H? False\n",
+      "Tháng Ba không thuộc H? True\n",
+      "Tháng Tư không thuộc H? False\n",
       "tập H gồm {9, 11, 4, 6}\n"
      ]
     }
@@ -157,13 +200,17 @@
     "locale.setlocale(locale.LC_ALL, 'vi_VN')\n",
     "\n",
     "year = 2023\n",
+    "for month in range(1, 13):\n",
+    "    print(\"Tháng\", month, \"có\", calendar.monthrange(year, month)[1], \"ngày\")\n",
     "\n",
     "H = {month for month in range(1, 13)\n",
     "     if calendar.monthrange(year, month)[1] == 30}\n",
     "\n",
-    "print(2 in H)\n",
-    "print(3 not in H)\n",
-    "print(4 not in H)\n",
+    "# Tháng Hai thuộc H?\n",
+    "print(\"Tháng Hai thuộc H?\", 2 in H)\n",
+    "# Tháng Ba không thuộc H?\n",
+    "print(\"Tháng Ba không thuộc H?\", 3 not in H)\n",
+    "print(\"Tháng Tư không thuộc H?\", 4 not in H)\n",
     "print(\"tập H gồm\", H)"
    ]
   },
@@ -205,7 +252,6 @@
     "\n",
     "Tóm lại, đoạn mã trên dùng để hiển thị thông tin về số ngày trong từng tháng của năm 2023 và thực hiện một số phép toán trên tập hợp H chứa các tháng có 30 ngày.\n",
     "\n",
-    "(ChatGPT)\n",
     "\n",
     "Sửa lại đoạn mã để H là tập hợp các tháng có 31 ngày?"
    ]
@@ -222,9 +268,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "030b91ed-2712-4ead-ab86-006ddf2e5f15",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -232,7 +280,7 @@
        "{0, 2, 4, 6, 8}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "f089056e-2363-4f70-a6af-66d1a2eb84d7",
    "metadata": {
     "tags": []
@@ -268,7 +316,7 @@
        "{4, 7, 10, 13, 16}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "5cd76cbe-4da7-42f4-b756-1619bea9f5e3",
    "metadata": {
     "tags": []
@@ -304,7 +352,7 @@
        "{'G', 'N', 'Ô', 'Đ'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "c4901331-40c2-43a1-bddf-5358fc223dc1",
    "metadata": {
     "tags": []
@@ -339,12 +387,13 @@
        "{'0', '2'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Viết tập hợp các số trong \"2020\"\n",
     "{\n",
     "    c for c in \"2020\"\n",
     "}"
@@ -360,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "581300aa-5070-43ca-9c40-bd7580e565e7",
    "metadata": {
     "tags": []
@@ -391,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "057b58e8-4b37-4bcb-92ea-b047f1fedc21",
    "metadata": {
     "tags": []
@@ -406,6 +455,7 @@
     }
    ],
    "source": [
+    "# 4 ∈ 𝐸?\n",
     "print(4 in E)"
    ]
   },
@@ -419,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "bff11cbd-d207-4774-9c3c-595b54de4bcc",
    "metadata": {
     "tags": []
@@ -431,12 +481,13 @@
        "{'G', 'N', 'Ô', 'Đ'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# B là tập hợp các chữ cái xuất hiện trong từ: \"ĐÔNG ĐÔ\"\n",
     "B = {\n",
     "    c for c in \"ĐÔNG ĐÔ\" if str.isalpha(c)\n",
     "}\n",
@@ -458,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "a1c24cb7-6b35-4f3c-9c33-790fe2d9fde1",
    "metadata": {
     "tags": []
@@ -470,7 +521,7 @@
        "{' ', 'G', 'N', 'Ô', 'Đ'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
