--- a/content/congtrunhanchia.ipynb
+++ b/content/congtrunhanchia.ipynb
@@ -12,71 +12,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "73c5ac94-83d0-4ff9-b05d-316157ddb169",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "121932631112635269"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "123456789 * 987654321"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d25ed0dd-c3ce-48fa-a377-541d6b0bc9ae",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "56088"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c162f27f-08b9-47d6-946c-b2936116bed1",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           123\n",
-      "*          456\n",
-      "--------------\n",
-      "(6*123)    738\n",
-      "(5*123)   615\n",
-      "(4*123)  492\n",
-      "--------------\n",
-      "         56088\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# biểu diễn việc nhân hai số tự nhiên theo cách nhân bằng tay\n",
     "def nhan_tay(n1, n2):\n",
@@ -104,33 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ebd699eb-36b7-42d6-81eb-cd199ce667f1",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                       123456789\n",
-      "*                      987654321\n",
-      "--------------------------------\n",
-      "(1*123456789)          123456789\n",
-      "(2*123456789)         246913578\n",
-      "(3*123456789)        370370367\n",
-      "(4*123456789)       493827156\n",
-      "(5*123456789)      617283945\n",
-      "(6*123456789)     740740734\n",
-      "(7*123456789)    864197523\n",
-      "(8*123456789)   987654312\n",
-      "(9*123456789) 1111111101\n",
-      "--------------------------------\n",
-      "              121932631112635269\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Nhân hai số dài\n",
     "n1 = \"123456789\"\n",
@@ -150,28 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0aed08fb-a3e8-40a9-87ea-a346a934cbd7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "123456789 * 987654321 = 121932631112635269\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "121932631112635269"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Nếu không cần phải biểu diễn từng bước một:\n",
     "def nhan_tay_simplify(n1, n2):\n",
@@ -192,48 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "47344b7a-8975-4f55-a6e8-c3225f5698ca",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 22222             | 22 = 1010 dư 2\n",
-      "--------------------------------\n",
-      "-0           (0*22)| 0\n",
-      " -                 |\n",
-      " 22           (2_2)|\n",
-      "-22          (1*22)| 01\n",
-      " --                |\n",
-      "  02          (0_2)|\n",
-      "  -0         (0*22)| 010\n",
-      "   -               |\n",
-      "   22         (2_2)|\n",
-      "  -22        (1*22)| 0101\n",
-      "   --              |\n",
-      "    02        (0_2)|\n",
-      "    -0       (0*22)| 01010\n",
-      "     -             |\n",
-      "     2         (2_)|\n",
-      "     =\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(1010, 2)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def divide(x, y, inner_work=False):\n",
     "    if y > x:\n",
@@ -289,23 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e7550af3-b67d-4d70-92a3-76e0f485c6c6",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1111, 0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# nếu không cần phải in các bước trung gian\n",
     "\n",
@@ -334,31 +211,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "874ea6d3-f562-4d97-a762-27c7e3510442",
+   "cell_type": "markdown",
+   "id": "cf377466-a628-491a-b280-aba3b2c909e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1234|22\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m     x \u001b[38;5;241m=\u001b[39m so_bi_chia[\u001b[38;5;241m0\u001b[39m:vi_tri_hien_tai]\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m10\u001b[39m):\n\u001b[1;32m---> 14\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mso_chia\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m:\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'int' and 'str'"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "Bạn có biết: Python dùng \"Grade school multiplication\" để thực hiện các phép nhân số tự nhiên không quá dài (Grade school multiplication là cách nhân hai số được dạy ở trường phổ thông)"
+   ]
   },
   {
    "cell_type": "code",
